--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,132 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.google.com/share?selection.family=Heebo:wght@400;500;700;900">
+    <link rel="stylesheet" href="styles/main.scss">
 </head>
 
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header__container">
+                <nav class="header__nav nav">
+                    <ul class="nav__list">
+                        <li class="nav__item"><a class="nav__link" href="#">Works</a></li>
+                        <li class="nav__item"><a class="nav__link" href="#">Blog</a></li>
+                        <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+    </header>
+    <main>
+        <div class="main__container">
+            <section class="technologist">
+                <div class="technologist__container">
+                    <div class="technologist__left">
+                        <h1 class="technologist__title">
+                            Hi, I am John, <br>Creative Technologist
+                        </h1>
+                        <p class="technologist__text">
+                            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                            Velit officia consequat duis
+                            enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                        </p>
+                        <button class="technologist__button">Download Resume</button>
+                    </div>
+                    <div class="technologist__right">
+                        <img class="technologist__img" src="image/Ellipse1.png" alt="man">
+                    </div>
+                </div>
+            </section>
+            <section class="posts">
+                <div class="posts__top">
+                    <p class="posts__subtitle">Recent posts</p>
+                    <a class="posts__link" href="#">View all</a>
+                </div>
+                <div class="posts__container">
+                    <div class="posts__left">
+                        <h2 class="posts__title">Making a design system from scratch</h2>
+                        <p class="posts__subject">Design, Pattern</p>
+                        <p class="posts__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                            Velit officia
+                            consequat
+                            duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
+                    <div class="posts__right">
+                        <h2 class="posts__title">Creating pixel perfect icons in Figma</h2>
+                        <p class="posts__subject">Figma, Icon Design</p>
+                        <p class="posts__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                            Velit officia
+                            consequat
+                            duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
+                </div>
+            </section>
+            <section class="works">
+                <p class="works__subtitle">Featured works</p>
+                <div class="works__container">
+                    <img class="works__img" src="image/Rectangle 30.png" alt="Dashboard">
+                    <div>
+                        <h2 class="works__title">Designing Dashboards</h2>
+                        <div class="works__container1">
+                            <p class="works__year">2020</p>
+                            <p class="works__img-alt">Dashboard</p>
+                        </div>
+                        <p class="works__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                            Velit officia consequat
+                            duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
+                </div>
+                <div class="works__container">
+                    <img class="works__img" src="image/Rectangle 32.png" alt="Illustration">
+                    <div>
+                        <h2 class="works__title">Vibrant Portraits of 2020</h2>
+                        <div class="works__container1">
+                            <p class="works__year">2018</p>
+                            <p class="works__img-alt">Illustration</p>
+                        </div>
+                        <p class="works__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                            Velit officia consequat
+                            duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
+                </div>
+                <div class="works__container">
+                    <img class="works__img" src="image/Rectangle 34.png" alt="Typography">
+                    <div>
+                        <h2 class="works__title">36 Days of Malayalam type</h2>
+                        <div class="works__container1">
+                            <p class="works__year">2018</p>
+                            <p class="works__img-alt">Typography</p>
+                        </div>
+                        <p class="works__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                            Velit officia consequat
+                            duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="footer__container">
+            <ul class="footer__list">
+                <li class="footer__item">
+                    <a class="footer__link" href="#"><img src="image/fb.svg" alt="Facebook"></a>
+                </li>
+                <li class="footer__item">
+                    <a class="footer__link" href="#"><img src="image/insta.svg" alt="Instagram"></a>
+                </li>
+                <li class="footer__item">
+                    <a class="footer__link" href="#"><img src="image/Vector.svg" alt="Twitter"></a>
+                </li>
+                <li class="footer__item">
+                    <a class="footer__link" href="#"><img src="image/Linkedin.svg" alt="Linkedin"></a>
+                </li>
+            </ul>
+            <p class="footer__copy">Copyright ©2020 All rights reserved</p>
+        </div>
+    </footer>
 </body>
 
 </html>
